// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should render correctly 1`] = `
.emotion-24 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-24 .emotion-7::after {
  left: 0;
}

.emotion-22 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-20 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-20 {
    overflow: hidden;
  }
}

.emotion-6 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-6:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #eab3b3;
    z-index: -1;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-4 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-4:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-2::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-8:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-8:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

<div>
  <nav
    class="emotion-24 emotion-25"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-22 emotion-23"
    >
      <ul
        class="emotion-20 emotion-21"
        role="list"
      >
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-4 emotion-5"
            data-navigation="test_navigation"
            href="/igbo"
          >
            <span
              class="emotion-2 emotion-3"
              role="text"
            >
              <span
                class="emotion-0 emotion-1"
              >
                Current page
                , 
              </span>
              Akụkọ
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/egwuregwu"
          >
            Egwuregwu
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/media/video"
          >
            Ihe nkiri
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/popular/read"
          >
            Nke ka ewuewu
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Navigation should render correctly when ampOpenClass prop is provided 1`] = `
.emotion-22 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-20 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-20 {
    overflow: hidden;
  }
}

.emotion-6 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-6:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #eab3b3;
    z-index: -1;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-4 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-4:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-2::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-8:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-8:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-24 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

@media (max-width:37.4375rem) {
  .emotion-24.is-open {
    background-color: #222222;
  }
}

.emotion-24 .emotion-7::after {
  left: 0;
}

<div>
  <nav
    class="emotion-24 emotion-25"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-22 emotion-23"
    >
      <ul
        class="emotion-20 emotion-21"
        role="list"
      >
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-4 emotion-5"
            data-navigation="test_navigation"
            href="/igbo"
          >
            <span
              class="emotion-2 emotion-3"
              role="text"
            >
              <span
                class="emotion-0 emotion-1"
              >
                Current page
                , 
              </span>
              Akụkọ
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/egwuregwu"
          >
            Egwuregwu
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/media/video"
          >
            Ihe nkiri
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/popular/read"
          >
            Nke ka ewuewu
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Navigation should render correctly when isOpen is true 1`] = `
.emotion-22 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-20 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-20 {
    overflow: hidden;
  }
}

.emotion-6 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-6:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #eab3b3;
    z-index: -1;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-4 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-4:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-2::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-8:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-8:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-24 {
  position: relative;
  background-color: #222222;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-24 .emotion-7::after {
  left: 0;
}

<div>
  <nav
    class="emotion-24 emotion-25"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-22 emotion-23"
    >
      <ul
        class="emotion-20 emotion-21"
        role="list"
      >
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-4 emotion-5"
            data-navigation="test_navigation"
            href="/igbo"
          >
            <span
              class="emotion-2 emotion-3"
              role="text"
            >
              <span
                class="emotion-0 emotion-1"
              >
                Current page
                , 
              </span>
              Akụkọ
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/egwuregwu"
          >
            Egwuregwu
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/media/video"
          >
            Ihe nkiri
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-5"
            data-navigation="test_navigation"
            href="/igbo/popular/read"
          >
            Nke ka ewuewu
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Scrollable Navigation should render correctly 1`] = `
.emotion-24 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-24 .emotion-7::after {
  left: 0;
}

.emotion-22 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-20 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-20 {
    overflow: hidden;
  }
}

.emotion-6 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-6:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #eab3b3;
    z-index: -1;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-4 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-4:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-2::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-8:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-8:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (max-width:37.4375rem) {
  .emotion-26 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-26::-webkit-scrollbar {
    display: none;
  }

  .emotion-26:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

@media (min-width:25rem) {
    .emotion-26:after {
      width: 6rem;
    }
}
}

<div>
  <div
    class="emotion-26 emotion-27"
    dir="ltr"
  >
    <nav
      class="emotion-24 emotion-25"
      dir="ltr"
      role="navigation"
    >
      <div
        class="emotion-22 emotion-23"
      >
        <ul
          class="emotion-20 emotion-21"
          role="list"
        >
          <li
            class="emotion-6 emotion-7"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-4 emotion-5"
              data-navigation="test_navigation"
              href="/igbo"
            >
              <span
                class="emotion-2 emotion-3"
                role="text"
              >
                <span
                  class="emotion-0 emotion-1"
                >
                  Current page
                  , 
                </span>
                Akụkọ
              </span>
            </a>
          </li>
          <li
            class="emotion-6 emotion-7"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-5"
              data-navigation="test_navigation"
              href="/igbo/egwuregwu"
            >
              Egwuregwu
            </a>
          </li>
          <li
            class="emotion-6 emotion-7"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-5"
              data-navigation="test_navigation"
              href="/igbo/media/video"
            >
              Ihe nkiri
            </a>
          </li>
          <li
            class="emotion-6 emotion-7"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-8 emotion-5"
              data-navigation="test_navigation"
              href="/igbo/popular/read"
            >
              Nke ka ewuewu
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;
